# classificationagent_azureai

./: .env.example  .funcignore  AGENT_BUILD_PLAN.md  AZURE_CREDENTIALS.example.json  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_READY_SUMMARY.md  OPENAPI_TOOL_GUIDE.md  PROJECT_INVENTORY.md  README.md  SDK_DEPLOYMENT_GUIDE.md  agent_deployment_config.json  agent_manifest.yaml  azure.yaml  check_function_app.ps1  deploy_agent_rest_api.py  deploy_commands.ps1  deploy_commands.sh  deployment_example.md  deployment_example_filled.md  function_app.py  local.settings.json  openapi_schema.json  openapi_schema.yaml  pyproject.toml  requirements.txt  sample.env  test_api.ps1  test_invoice_api.ps1  tmp_regex_check.py
.github/workflows/: deploy.yml
foundry/: AGENT_REGISTRATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  QUICK_REFERENCE.md  TESTING_AND_REGISTRATION.md  agent_registration.json  agent_registration.json.template
infra/: main.bicep  main.json
samples/: README.md  sample_deployed_request.json  sample_invoice.txt  sample_request_with_file.json
scripts/: create_sp.ps1  create_sp.sh  deploy_agent_to_foundry.py  deploy_agent_to_foundry_api.ps1  deploy_to_foundry.ps1  print_github_secret.py  test_foundry_agent.py  test_invoke.ps1  test_invoke.py
src/invoice_agent/: __init__.py  agent.py  cli.py  document_intelligence.py
src/invoice_agent_foundry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py
