[project]
name = "invoice-agent-foundry"
version = "0.1.0"
description = "Azure AI Foundry agent for extracting and classifying vendor invoices"
requires-python = ">=3.10"
dependencies = [
  "azure-ai-documentintelligence>=1.0.0",
  "azure-ai-projects>=1.0.0",
  "azure-identity>=1.20.0",
  "azure-functions>=1.0.0",
  "pytest>=8.0.0"
]

[project.scripts]
invoice-agent = "invoice_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
